# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0002_initial.py  0003_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: index.html  layout.html  nav.html
task_manager/templates/forms/: delete_form.html  form.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_list.html  label_update.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_list.html  status_update.html  statuses_list.html
task_manager/templates/tasks/: one_task.html  task_create.html  task_delete.html  task_list.html  task_update.html  tasks_list.html
task_manager/templates/users/: user_create.html  user_delete.html  user_form.html  user_list.html  user_login.html  (+1 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+2 files in other folders)
