[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["pestrukha <sturbauen@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^24.3"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
